Fix history scrollbar position

--- a/static/layout.css
+++ b/static/layout.css
@@ -66,9 +66,9 @@ div.leftarea {
 
 div#rightscroll {
     position:absolute;
-    width:17vh;
+    width:17.5vh;
     height:90vh;
-    right:-1vh;
+    right:-1.5vh;
     overflow-y:auto;
 }
 
